# surveyai

./: README.md  pyproject.toml  simplesurvey.ipynb
